yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restapi-service
spec:
  selector:
    app: restapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5432
