yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.jnajera.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: restapi-service
            port:
              number: 8080
